fix: profile layout breaking fixed

--- a/blocks/profile/__field-about/profile__field-about.css
+++ b/blocks/profile/__field-about/profile__field-about.css
@@ -6,6 +6,9 @@
     margin: 0;
     grid-column-start: 1;
     grid-column-end: 3;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 700px) {
