--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,7 +2,7 @@
     color: #FFFFFF;
     margin: 23px 0 0 30px;
     display: grid;
-    max-width: 336px;
+    width: 336px;
     grid-template-columns: auto auto;
     grid-template-rows: 1fr 1fr;
     row-gap: 7px;
